--- a/MemeThing/Views/EndOfRound.storyboard
+++ b/MemeThing/Views/EndOfRound.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poq-0W-Hh3" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
-                                <rect key="frame" x="20.5" y="687.5" width="373" height="41"/>
+                                <rect key="frame" x="20.5" y="688" width="373" height="41"/>
                                 <state key="normal" title="Continue"/>
                                 <connections>
                                     <action selector="continueButtonTapped:" destination="UaH-bf-bqP" eventType="touchUpInside" id="ksX-tY-eV5"/>
@@ -32,19 +32,37 @@
                                 <rect key="frame" x="20.5" y="164" width="373" height="487"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PKS-h6-6LA">
-                                        <rect key="frame" x="0.0" y="0.0" width="373" height="487"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="466.5"/>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yZ-7t-7eS" customClass="MemeThingCaption" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="466.5" width="373" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="ozi-iF-g8r">
+                                        <rect key="frame" x="161.5" y="218.5" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ozi-iF-g8r" secondAttribute="height" multiplier="1:1" id="Tdb-X0-maF"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="WtQ-Pr-pmA"/>
+                                        </constraints>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="PKS-h6-6LA" firstAttribute="centerY" secondItem="ezc-7D-MKU" secondAttribute="centerY" id="3gK-Jk-FNK"/>
                                     <constraint firstItem="PKS-h6-6LA" firstAttribute="width" secondItem="ezc-7D-MKU" secondAttribute="width" id="51E-W0-csd"/>
-                                    <constraint firstItem="PKS-h6-6LA" firstAttribute="height" secondItem="ezc-7D-MKU" secondAttribute="height" id="ZNd-l7-8m2"/>
+                                    <constraint firstItem="5yZ-7t-7eS" firstAttribute="top" secondItem="PKS-h6-6LA" secondAttribute="bottom" id="9Ds-gq-hY0"/>
+                                    <constraint firstAttribute="bottom" secondItem="5yZ-7t-7eS" secondAttribute="bottom" id="EcS-iV-Voz"/>
+                                    <constraint firstItem="5yZ-7t-7eS" firstAttribute="leading" secondItem="ezc-7D-MKU" secondAttribute="leading" id="MSG-cK-qI3"/>
+                                    <constraint firstItem="ozi-iF-g8r" firstAttribute="centerX" secondItem="ezc-7D-MKU" secondAttribute="centerX" id="VXC-hi-YZN"/>
+                                    <constraint firstAttribute="trailing" secondItem="5yZ-7t-7eS" secondAttribute="trailing" id="Y43-9M-Her"/>
                                     <constraint firstItem="PKS-h6-6LA" firstAttribute="centerX" secondItem="ezc-7D-MKU" secondAttribute="centerX" id="r24-7k-ww5"/>
+                                    <constraint firstItem="PKS-h6-6LA" firstAttribute="top" secondItem="ezc-7D-MKU" secondAttribute="top" id="src-Mh-dCs"/>
+                                    <constraint firstItem="ozi-iF-g8r" firstAttribute="centerY" secondItem="ezc-7D-MKU" secondAttribute="centerY" id="xhu-F2-40y"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yZ-7t-7eS" customClass="MemeThingCaption" customModule="MemeThing" customModuleProvider="target">
-                                <rect key="frame" x="20.5" y="659" width="373" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHi-YD-VRK" customClass="MemeThingLabelBackgroundLight" customModule="MemeThing" customModuleProvider="target">
+                                <rect key="frame" x="20.5" y="659" width="373" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -52,20 +70,20 @@
                         </subviews>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="poq-0W-Hh3" firstAttribute="top" secondItem="5yZ-7t-7eS" secondAttribute="bottom" constant="8" id="33n-l1-WiN"/>
+                            <constraint firstItem="poq-0W-Hh3" firstAttribute="top" secondItem="KHi-YD-VRK" secondAttribute="bottom" constant="8" id="0x4-cS-Fz6"/>
                             <constraint firstItem="poq-0W-Hh3" firstAttribute="width" secondItem="oRY-78-WsG" secondAttribute="width" multiplier="0.9" id="Aq9-DZ-EKo"/>
                             <constraint firstItem="ejJ-2K-M7N" firstAttribute="centerX" secondItem="oRY-78-WsG" secondAttribute="centerX" id="BKK-ZJ-WPC"/>
                             <constraint firstItem="ejJ-2K-M7N" firstAttribute="width" secondItem="oRY-78-WsG" secondAttribute="width" multiplier="0.9" id="HSb-WH-aeX"/>
                             <constraint firstItem="poq-0W-Hh3" firstAttribute="centerX" secondItem="oRY-78-WsG" secondAttribute="centerX" id="IVI-6g-rsh"/>
-                            <constraint firstItem="5yZ-7t-7eS" firstAttribute="centerX" secondItem="oRY-78-WsG" secondAttribute="centerX" id="OrJ-AX-VwM"/>
+                            <constraint firstItem="KHi-YD-VRK" firstAttribute="centerX" secondItem="oRY-78-WsG" secondAttribute="centerX" id="MEb-7Z-mf1"/>
                             <constraint firstItem="ezc-7D-MKU" firstAttribute="centerY" secondItem="oRY-78-WsG" secondAttribute="centerY" multiplier="0.9" id="Put-cE-g1o"/>
                             <constraint firstItem="poq-0W-Hh3" firstAttribute="height" secondItem="oRY-78-WsG" secondAttribute="height" multiplier="0.05" id="XUw-KC-t83"/>
-                            <constraint firstItem="5yZ-7t-7eS" firstAttribute="top" secondItem="ezc-7D-MKU" secondAttribute="bottom" constant="8" id="ZPQ-Dj-3vX"/>
-                            <constraint firstItem="5yZ-7t-7eS" firstAttribute="width" secondItem="oRY-78-WsG" secondAttribute="width" multiplier="0.9" id="ev1-Bp-j0i"/>
                             <constraint firstItem="ezc-7D-MKU" firstAttribute="centerX" secondItem="oRY-78-WsG" secondAttribute="centerX" id="pPu-vO-uhz"/>
                             <constraint firstItem="ezc-7D-MKU" firstAttribute="top" secondItem="ejJ-2K-M7N" secondAttribute="bottom" constant="8" id="q5c-V4-5x1"/>
                             <constraint firstItem="ezc-7D-MKU" firstAttribute="width" secondItem="oRY-78-WsG" secondAttribute="width" multiplier="0.9" id="rmb-Th-0Yr"/>
+                            <constraint firstItem="KHi-YD-VRK" firstAttribute="top" secondItem="ezc-7D-MKU" secondAttribute="bottom" constant="8" id="tZq-Hq-Aei"/>
                             <constraint firstItem="ezc-7D-MKU" firstAttribute="height" secondItem="oRY-78-WsG" secondAttribute="height" multiplier="0.595355" id="ugQ-H9-8ao"/>
+                            <constraint firstItem="KHi-YD-VRK" firstAttribute="width" secondItem="oRY-78-WsG" secondAttribute="width" multiplier="0.9" id="zMY-6v-xFU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oRY-78-WsG"/>
                         <connections>
@@ -74,7 +92,9 @@
                     </view>
                     <connections>
                         <outlet property="captionLabel" destination="5yZ-7t-7eS" id="QPZ-Qf-nYD"/>
+                        <outlet property="loadingIndicator" destination="ozi-iF-g8r" id="ru9-Nu-FV8"/>
                         <outlet property="memeImageView" destination="PKS-h6-6LA" id="MRP-Av-cid"/>
+                        <outlet property="nextUpLabel" destination="KHi-YD-VRK" id="e6O-8k-IRD"/>
                         <outlet property="winnerLabel" destination="ejJ-2K-M7N" id="jad-vH-wcI"/>
                     </connections>
                 </viewController>
