--- a/MemeThing/Views/AddCaption.storyboard
+++ b/MemeThing/Views/AddCaption.storyboard
@@ -60,13 +60,26 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="7IK-AJ-lNo">
                                         <rect key="frame" x="20.5" y="16.5" width="373" height="620"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPV-4g-3rQ">
+                                        <rect key="frame" x="359.5" y="602.5" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="jPV-4g-3rQ" secondAttribute="height" multiplier="1:1" id="B63-Rb-HJ1"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="flag" catalog="system"/>
+                                        <connections>
+                                            <action selector="reportContentButton:" destination="wv3-dL-fID" eventType="touchUpInside" id="xUb-RB-hb5"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="7IK-AJ-lNo" firstAttribute="centerX" secondItem="2qC-42-JGe" secondAttribute="centerX" id="4xQ-2m-Vr8"/>
                                     <constraint firstItem="7IK-AJ-lNo" firstAttribute="height" secondItem="2qC-42-JGe" secondAttribute="height" multiplier="0.95" id="8Kv-ny-tP6"/>
+                                    <constraint firstItem="jPV-4g-3rQ" firstAttribute="bottom" secondItem="7IK-AJ-lNo" secondAttribute="bottom" constant="-12" id="HlS-LF-KKp"/>
                                     <constraint firstItem="7IK-AJ-lNo" firstAttribute="centerY" secondItem="2qC-42-JGe" secondAttribute="centerY" id="Lj7-vI-zob"/>
                                     <constraint firstItem="7IK-AJ-lNo" firstAttribute="width" secondItem="2qC-42-JGe" secondAttribute="width" multiplier="0.9" id="akC-Fe-QSW"/>
+                                    <constraint firstItem="jPV-4g-3rQ" firstAttribute="trailing" secondItem="7IK-AJ-lNo" secondAttribute="trailing" constant="-12" id="q9N-Qv-L5O"/>
                                 </constraints>
                             </view>
                             <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="GQi-c7-ih1">
@@ -125,6 +138,7 @@
     </scenes>
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <image name="flag" catalog="system" width="128" height="121"/>
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
