--- a/MemeThing/Views/ViewResults.storyboard
+++ b/MemeThing/Views/ViewResults.storyboard
@@ -46,13 +46,26 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="AlU-DO-Xe3">
                                         <rect key="frame" x="20.5" y="14.5" width="373" height="541.5"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zC-us-Pue">
+                                        <rect key="frame" x="359.5" y="522" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="3zC-us-Pue" secondAttribute="height" multiplier="1:1" id="qVh-jn-W6j"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="flag" catalog="system"/>
+                                        <connections>
+                                            <action selector="reportImageButtonTapped:" destination="OFq-l9-Vna" eventType="touchUpInside" id="GmK-vB-UE7"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="AlU-DO-Xe3" firstAttribute="height" secondItem="yf6-n3-Yte" secondAttribute="height" multiplier="0.95" id="Cei-zQ-9EP"/>
                                     <constraint firstItem="AlU-DO-Xe3" firstAttribute="centerY" secondItem="yf6-n3-Yte" secondAttribute="centerY" id="E3A-o9-UOb"/>
                                     <constraint firstItem="AlU-DO-Xe3" firstAttribute="centerX" secondItem="yf6-n3-Yte" secondAttribute="centerX" id="I0Z-0M-5LF"/>
+                                    <constraint firstItem="3zC-us-Pue" firstAttribute="bottom" secondItem="AlU-DO-Xe3" secondAttribute="bottom" constant="-12" id="LGB-ZV-qBu"/>
                                     <constraint firstItem="AlU-DO-Xe3" firstAttribute="width" secondItem="yf6-n3-Yte" secondAttribute="width" multiplier="0.9" id="d2y-v3-6pC"/>
+                                    <constraint firstItem="3zC-us-Pue" firstAttribute="trailing" secondItem="AlU-DO-Xe3" secondAttribute="trailing" constant="-12" id="dpm-iG-ZSb"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AI8-U4-y9f" customClass="MemeThingViewSubtle" customModule="MemeThing" customModuleProvider="target">
@@ -99,6 +112,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CL9-hn-DN2">
                                 <rect key="frame" x="20.5" y="658" width="373" height="82"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvc-ly-50N">
+                                        <rect key="frame" x="339" y="48" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="gvc-ly-50N" secondAttribute="height" multiplier="1:1" id="GcK-Ft-b3L"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="flag" catalog="system"/>
+                                        <connections>
+                                            <action selector="reportCaptionButtonTapped:" destination="OFq-l9-Vna" eventType="touchUpInside" id="cAd-vH-Jri"/>
+                                        </connections>
+                                    </button>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="100" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8m-FQ-Uba">
                                         <rect key="frame" x="0.0" y="0.0" width="373" height="82"/>
                                     </scrollView>
@@ -106,7 +130,9 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="A8m-FQ-Uba" secondAttribute="trailing" id="HMQ-0l-s4i"/>
+                                    <constraint firstAttribute="bottom" secondItem="gvc-ly-50N" secondAttribute="bottom" constant="12" id="Vlh-iA-DrB"/>
                                     <constraint firstItem="A8m-FQ-Uba" firstAttribute="leading" secondItem="CL9-hn-DN2" secondAttribute="leading" id="clf-gQ-ON7"/>
+                                    <constraint firstAttribute="trailing" secondItem="gvc-ly-50N" secondAttribute="trailing" constant="12" id="kiQ-13-Bap"/>
                                     <constraint firstAttribute="bottom" secondItem="A8m-FQ-Uba" secondAttribute="bottom" id="ru0-5c-5NE"/>
                                     <constraint firstItem="A8m-FQ-Uba" firstAttribute="top" secondItem="CL9-hn-DN2" secondAttribute="top" id="uBn-ad-QRa"/>
                                 </constraints>
@@ -181,6 +207,7 @@
     </scenes>
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <image name="flag" catalog="system" width="128" height="121"/>
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
